--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
-# This Project was done by this individual below
-
-Bright<ivquestservices@gmail.com>
+# This Project was done by this individuals below
+Malack Okeiga
+Martin Nyagaya
